[package]
name = "images_conversion_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
log = "0.4.21"
actix-web = "4.6.0"
rayon = "1.10.0"
serde = { version = "1.0.202", features = ["derive"] }
rust-dropbox = "0.2.8"
tokio = {version = "1.37.0", features = ["full"]}
mongodb = {version = "2.8.2", features = ["tokio-runtime"]}
futures = "0.3.30"